Update remapping to find/replace as discussed
